package toYadoms;

message SetPluginState {
	enum EPluginState {
		kUnknown = 0; kError = 1; kStopped = 2; kRunning = 3; kCustom = 4;
	}
	required EPluginState pluginState = 1;
	optional string customMessageId = 2;
}

message ConfigurationRequest {
}

message BindingQueryAnswer {
	required bool success = 1;
	required string result = 2;
}

message DeviceExitsRequest {
	required string device = 1;
}

message DeviceDetailsRequest {
	required string device = 1;
}

message KeywordExitsRequest {
	required string device = 1;
	required string keyword = 2;
}

message DeclareDevice {
	required string device = 1;
	required string model = 2;
	required string details = 3;
}

message msg {
	oneof OneOf {
		SetPluginState pluginState = 1;
		ConfigurationRequest configurationRequest = 2;
		BindingQueryAnswer bindingQueryAnswer = 3;
		DeviceExitsRequest deviceExists = 4;
		DeviceDetailsRequest deviceDetails = 5;
		KeywordExitsRequest keywordExists = 6;
		DeclareDevice declareDevice = 7;
	}
}
